--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 	<meta property="og:type" content="website">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="coming soon">
-    <meta name="keywords" content="coming soon">
-    <meta name="author" content="Cypersoft">
+        <meta name="keywords" content="coming soon">
+        <meta name="author" content="Cypersoft">
 	<!-- Page Title -->
 	<title>Asiacera International</title>
 	<!-- Google Fonts css-->
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
 	<!-- Bootstrap css -->
-	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="./css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<!-- Font Awesome icon css-->
-	<link href="css/font-awesome.min.css" rel="stylesheet" media="screen">
+	<link href="./css/font-awesome.min.css" rel="stylesheet" media="screen">
 	<!-- Main custom css -->
 	<link href="./css/custom.css" rel="stylesheet" media="screen">
 </head>
