--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
 	<!-- Coming Soon Wrapper end -->
 	
     <!-- Jquery Library File -->
-	<script src="js/jquery-1.12.4.min.js"></script>
+	<script src="./js/jquery-1.12.4.min.js"></script>
 	<!-- Timer counter js file -->
-	<script src="js/countdown-timer.js"></script>
+	<script src="./js/countdown-timer.js"></script>
 	<!-- Typed js file -->
-	<script src="js/typed.js"></script>
+	<script src="./js/typed.js"></script>
 	<!-- SmoothScroll -->
-	<script src="js/SmoothScroll.js"></script>
+	<script src="./js/SmoothScroll.js"></script>
     <!-- Bootstrap js file -->
-	<script src="js/bootstrap.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
     <!-- Main Custom js file -->
-	<script src="js/function.js"></script>
+	<script src="./js/function.js"></script>
 	<!-- Timer counter start -->
 	<script>
         $(document).ready(function (){
