--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 	<!-- Coming Soon Wrapper end -->
 	
     <!-- Jquery Library File -->
-	<script src="./js/jquery-1.12.4.min.js"></script>
+	<script src="./js/jquery1.12.4.min.js"></script>
 	<!-- Timer counter js file -->
-	<script src="./js/countdown-timer.js"></script>
+	<script src="./js/countdowntimer.js"></script>
 	<!-- Typed js file -->
 	<script src="./js/typed.js"></script>
 	<!-- SmoothScroll -->
@@ -110,7 +110,6 @@
 	<!-- Timer counter start -->
 	<script>
         $(document).ready(function (){
-			//var myDate = new Date("08/04/2019");
 			var myDate = new Date("07/08/2024");
 			myDate.setDate(myDate.getDate() + 40);
             $("#countdown").countdown(myDate, function (event) {
