--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<p>The future has a way of arriving unannounced.</p>
 							
 							<div class="newsletter-form">
-								<form action="#" method="post">
+								<form action="https://asiacerainternational.com" method="post">
 									<input type="text" class="new-text" placeholder="Enter your email address...." required />
 									<button type="submit" class="new-btn">Notify Me</button>
 								</form>
