--- a/800x800Carving.html
+++ b/800x800Carving.html
@@ -309,7 +309,7 @@
 										<img src="assets/images/photos/800x800/Carving/1.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="carving.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Carving.html"> 	
 											 View All													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_381_163)">
