--- a/600x1200glossy.html
+++ b/600x1200glossy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
 <head>
 		<meta charset="utf-8">
         <meta name="theme-color"  content="#253b2f">
@@ -55,7 +55,7 @@
 					<div class="container-fluid max-width">
 			
 						<div class="d-flex align-items-end">
-							<a class="navbar-brand py-0" href="index.html">
+							<a class="navbar-brand py-0" href="index">
 								<span class="logo">
 									<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 								</span>
@@ -88,13 +88,13 @@
 								<ul class="navbar-nav justify-content-end flex-grow-1 align-items-xl-center">
 			
 									<li class="nav-item">
-										<a class="nav-link" href="index.html">
+										<a class="nav-link" href="index">
 											Home
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="about-us.html">
+										<a class="nav-link" href="about-us">
 											About Us
 										</a>
 									</li>
@@ -109,15 +109,15 @@
 												<a class="dropdown-item submenu-toggle dropdown-mobileview" href="#">Porcelain
 													Tiles</a>
 												<ul class="dropdown-menu submenu ">
-													<li><a class="dropdown-item submenu-mobile" href="600x600.html">600x600</a></li>
-													<li><a class="dropdown-item submenu-mobile" href="800x800.html">800x800</a></li>
-													<li><a class="dropdown-item submenu-mobile" href="600x1200.html">600x1200</a>
+													<li><a class="dropdown-item submenu-mobile" href="600x600">600x600</a></li>
+													<li><a class="dropdown-item submenu-mobile" href="800x800">800x800</a></li>
+													<li><a class="dropdown-item submenu-mobile" href="600x1200">600x1200</a>
 													</li>
 												</ul>
 											</li>
 			
-											<li><a class="dropdown-item" href="slab-tiles.html">Slab Tiles</a></li>
-											<li><a class="dropdown-item" href="ceramic-raw-material.html">Ceramic Raw Material</a>
+											<li><a class="dropdown-item" href="slab-tiles">Slab Tiles</a></li>
+											<li><a class="dropdown-item" href="ceramic-raw-material">Ceramic Raw Material</a>
 											</li>
 										</ul>
 									</li>
@@ -128,26 +128,26 @@
 											Product Details
 										</a>
 										<ul class="dropdown-menu" aria-labelledby="productDetailsDropdown">
-											<li><a class="dropdown-item" href="PackingDetails.html">Packing Details</a></li>
-											<li><a class="dropdown-item" href="technical-specification.html">Technical
+											<li><a class="dropdown-item" href="PackingDetails">Packing Details</a></li>
+											<li><a class="dropdown-item" href="technical-specification">Technical
 													Specification</a></li>
 										</ul>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="export.html">
+										<a class="nav-link" href="export">
 											Export
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="catalogue.html">
+										<a class="nav-link" href="catalogue">
 											Catalogue
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="contact.html">
+										<a class="nav-link" href="contact">
 											Contact
 										</a>
 									</li>
@@ -302,7 +302,7 @@
 										<img src="assets/images/photos/600x1200/Dc-Collection.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Dc-Collection.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Dc-Collection"> 	
 											View All													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_381_163)">
@@ -318,7 +318,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="Dc-Collection.html" class="text-decoration-none">
+								<a href="Dc-Collection" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Dc Collection</h5>
@@ -342,7 +342,7 @@
 										<img src="assets/images/photos/600x1200/Endless-Collection.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Endless-Collection.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Endless-Collection"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_381_163)">
@@ -358,7 +358,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="Endless-Collection.html" class="text-decoration-none">
+								<a href="Endless-Collection" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Endless Collection</h5>
@@ -382,7 +382,7 @@
 										<img src="assets/images/photos/600x1200/Wl-3d-Collection.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-3d-Collection.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-3d-Collection"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_381_163)">
@@ -398,7 +398,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="Wl-3d-Collection.html" class="text-decoration-none">
+								<a href="Wl-3d-Collection" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">3d Collection</h5>
@@ -422,7 +422,7 @@
 										<img src="assets/images/photos/600x1200/WL-BookMatch-Collection.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-BookMatch-Collection.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-BookMatch-Collection"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -438,7 +438,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="WL-BookMatch-Collection.html" class="text-decoration-none">
+								<a href="WL-BookMatch-Collection" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">BookMatch Collection</h5>
@@ -462,7 +462,7 @@
 										<img src="assets/images/photos/600x1200/WL-Collection-Part-1.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-Collection-Part-1.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-Collection-Part-1"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -478,7 +478,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="WL-Collection-Part-1.html" class="text-decoration-none">
+								<a href="WL-Collection-Part-1" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Collection Part-01</h5>
@@ -502,7 +502,7 @@
 										<img src="assets/images/photos/600x1200/WL-Collection-Part-2.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-Collection-Part-02.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-Collection-Part-02"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -518,7 +518,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="WL-Collection-Part-02.html" class="text-decoration-none">
+								<a href="WL-Collection-Part-02" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Collection Part-02</h5>
@@ -542,7 +542,7 @@
 										<img src="assets/images/photos/600x1200/WL-Collection-Part-3.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-Collection-Part-03.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-Collection-Part-03"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -558,7 +558,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="WL-Collection-Part-03.html" class="text-decoration-none">
+								<a href="WL-Collection-Part-03" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Collection Part-03</h5>
@@ -582,7 +582,7 @@
 										<img src="assets/images/photos/600x1200/WL-Collection-Part-4.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-Collection-Part-04.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-Collection-Part-04"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -598,7 +598,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="WL-Collection-Part-04.html" class="text-decoration-none">
+								<a href="WL-Collection-Part-04" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Collection Part-04</h5>
@@ -622,7 +622,7 @@
 										<img src="assets/images/photos/600x1200/Wl-marmi-Collection.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-marmi-Collection.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-marmi-Collection"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -638,7 +638,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="Wl-marmi-Collection.html" class="text-decoration-none">
+								<a href="Wl-marmi-Collection" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">marmi Collection</h5>
@@ -662,7 +662,7 @@
 										<img src="assets/images/photos/600x1200/Wl-New-Book-Match-Collection.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-New-Book-Match-Collection.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-New-Book-Match-Collection"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -678,7 +678,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="Wl-New-Book-Match-Collection.html" class="text-decoration-none">
+								<a href="Wl-New-Book-Match-Collection" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">New Book Match Collection</h5>
@@ -702,7 +702,7 @@
 										<img src="assets/images/photos/600x1200/Wl-New-Infinite-Collection.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-New-Infinite-Collection.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-New-Infinite-Collection"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -718,7 +718,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="Wl-New-Infinite-Collection.html" class="text-decoration-none">
+								<a href="Wl-New-Infinite-Collection" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">New Infinite Collection</h5>
@@ -742,7 +742,7 @@
 										<img src="assets/images/photos/600x1200/Wl-platinum-Collection.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-platinum-Collection.html">
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-platinum-Collection">
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_381_163)">
@@ -759,7 +759,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="Wl-platinum-Collection.html" class="text-decoration-none">
+								<a href="Wl-platinum-Collection" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">platinum Collection</h5>
@@ -823,7 +823,7 @@
 						<div class="feedback-content d-flex flex-column gap-4 flex-lg-row align-items-lg-end justify-content-lg-around">
 							<h2 class="fw-extra-bold feedback-title">Drop Us a Line</h2>
 							<div class="Asiacera-International-button">
-								<a href="contact.html" class="btn btn-secondary gap-10"> 
+								<a href="contact" class="btn btn-secondary gap-10"> 
 									Lets Talk
 									<svg class="arrow" width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"></path>
@@ -846,7 +846,7 @@
 						<div class="row gy-5 gy-lg-0  justify-content-between">
 							<div class="col-lg-3">
 								<div>
-									<a class="navbar-brand py-0" href="index.html">
+									<a class="navbar-brand py-0" href="index">
 										<span class="logo">
 											<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 										</span>
@@ -919,12 +919,12 @@
 									<h5 class="fw-extra-bold separator">More Details </h5>
 			
 									<div class="d-flex flex-column">
-										<p><a href="about-us.html" class="text-decoration-none link-hover-animation-1">About
+										<p><a href="about-us" class="text-decoration-none link-hover-animation-1">About
 												Us</a></p>
-										<p><a href="export.html" class="text-decoration-none link-hover-animation-1">Export</a></p>
-										<p><a href="catalogue.html"
+										<p><a href="export" class="text-decoration-none link-hover-animation-1">Export</a></p>
+										<p><a href="catalogue"
 												class="text-decoration-none link-hover-animation-1">Catalogue</a></p>
-										<p><a href="contact.html" class="text-decoration-none link-hover-animation-1">Contact Us</a>
+										<p><a href="contact" class="text-decoration-none link-hover-animation-1">Contact Us</a>
 										</p>
 									</div>
 								</div>
@@ -1016,5 +1016,5 @@
 	</body>
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
 </html>
