--- a/600x1200matt.html
+++ b/600x1200matt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
 <head>
 		<meta charset="utf-8">
         <meta name="theme-color"  content="#253b2f">
@@ -63,7 +63,7 @@
 					<div class="container-fluid max-width">
 			
 						<div class="d-flex align-items-end">
-							<a class="navbar-brand py-0" href="index.html">
+							<a class="navbar-brand py-0" href="index">
 								<span class="logo">
 									<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 								</span>
@@ -96,13 +96,13 @@
 								<ul class="navbar-nav justify-content-end flex-grow-1 align-items-xl-center">
 			
 									<li class="nav-item">
-										<a class="nav-link" href="index.html">
+										<a class="nav-link" href="index">
 											Home
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="about-us.html">
+										<a class="nav-link" href="about-us">
 											About Us
 										</a>
 									</li>
@@ -117,15 +117,15 @@
 												<a class="dropdown-item submenu-toggle dropdown-mobileview" href="#">Porcelain
 													Tiles</a>
 												<ul class="dropdown-menu submenu ">
-													<li><a class="dropdown-item submenu-mobile" href="600x600.html">600x600</a></li>
-													<li><a class="dropdown-item submenu-mobile" href="800x800.html">800x800</a></li>
-													<li><a class="dropdown-item submenu-mobile" href="600x1200.html">600x1200</a>
+													<li><a class="dropdown-item submenu-mobile" href="600x600">600x600</a></li>
+													<li><a class="dropdown-item submenu-mobile" href="800x800">800x800</a></li>
+													<li><a class="dropdown-item submenu-mobile" href="600x1200">600x1200</a>
 													</li>
 												</ul>
 											</li>
 			
-											<li><a class="dropdown-item" href="slab-tiles.html">Slab Tiles</a></li>
-											<li><a class="dropdown-item" href="ceramic-raw-material.html">Ceramic Raw Material</a>
+											<li><a class="dropdown-item" href="slab-tiles">Slab Tiles</a></li>
+											<li><a class="dropdown-item" href="ceramic-raw-material">Ceramic Raw Material</a>
 											</li>
 										</ul>
 									</li>
@@ -136,26 +136,26 @@
 											Product Details
 										</a>
 										<ul class="dropdown-menu" aria-labelledby="productDetailsDropdown">
-											<li><a class="dropdown-item" href="PackingDetails.html">Packing Details</a></li>
-											<li><a class="dropdown-item" href="technical-specification.html">Technical
+											<li><a class="dropdown-item" href="PackingDetails">Packing Details</a></li>
+											<li><a class="dropdown-item" href="technical-specification">Technical
 													Specification</a></li>
 										</ul>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="export.html">
+										<a class="nav-link" href="export">
 											Export
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="catalogue.html">
+										<a class="nav-link" href="catalogue">
 											Catalogue
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="contact.html">
+										<a class="nav-link" href="contact">
 											Contact
 										</a>
 									</li>
@@ -310,7 +310,7 @@
 										<img src="assets/images/photos/600x1200/Wl-curving-Collection.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="wl-Carving.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="wl-Carving"> 	
 											 View All													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_381_163)">
@@ -326,7 +326,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="wl-Carving.html" class="text-decoration-none">
+								<a href="wl-Carving" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Carving Collection</h5>
@@ -350,7 +350,7 @@
 										<img src="assets/images/photos/600x1200/WL-Matt-2023-Collection.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-Matt-2023-Collection.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="WL-Matt-2023-Collection"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_381_163)">
@@ -366,7 +366,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="WL-Matt-2023-Collection.html" class="text-decoration-none">
+								<a href="WL-Matt-2023-Collection" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title"> Matt Collection</h5>
@@ -390,7 +390,7 @@
 										<img src="assets/images/photos/600x1200/Wl-Wooden-2023.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-Wooden-2023.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-Wooden-2023"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_381_163)">
@@ -406,7 +406,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="Wl-Wooden-2023.html" class="text-decoration-none">
+								<a href="Wl-Wooden-2023" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Wooden Collection</h5>
@@ -430,7 +430,7 @@
 										<img src="assets/images/shop-image-4.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -446,7 +446,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Washbasins</h5>
@@ -470,7 +470,7 @@
 										<img src="assets/images/shop-image-5.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -486,7 +486,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Collaro</h5>
@@ -510,7 +510,7 @@
 										<img src="assets/images/shop-image-6.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -526,7 +526,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Pendant Lamp</h5>
@@ -550,7 +550,7 @@
 										<img src="assets/images/shop-image-7.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -566,7 +566,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Pendant Lamp</h5>
@@ -590,7 +590,7 @@
 										<img src="assets/images/shop-image-8.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -606,7 +606,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Scandal Wall Sconce</h5>
@@ -630,7 +630,7 @@
 										<img src="assets/images/shop-image-9.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -646,7 +646,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Soft Facet</h5>
@@ -670,7 +670,7 @@
 										<img src="assets/images/shop-image-10.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -686,7 +686,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Delírios Armchair</h5>
@@ -710,7 +710,7 @@
 										<img src="assets/images/shop-image-11.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -726,7 +726,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Panthella Portable</h5>
@@ -750,7 +750,7 @@
 										<img src="assets/images/shop-image-12.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -766,7 +766,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Ralik Modular System</h5>
@@ -828,7 +828,7 @@
 						<div class="feedback-content d-flex flex-column gap-4 flex-lg-row align-items-lg-end justify-content-lg-around">
 							<h2 class="fw-extra-bold feedback-title">Drop Us a Line</h2>
 							<div class="Asiacera-International-button">
-								<a href="contact.html" class="btn btn-secondary gap-10"> 
+								<a href="contact" class="btn btn-secondary gap-10"> 
 									Lets Talk
 									<svg class="arrow" width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"></path>
@@ -851,7 +851,7 @@
 						<div class="row gy-5 gy-lg-0  justify-content-between">
 							<div class="col-lg-3">
 								<div>
-									<a class="navbar-brand py-0" href="index.html">
+									<a class="navbar-brand py-0" href="index">
 										<span class="logo">
 											<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 										</span>
@@ -924,12 +924,12 @@
 									<h5 class="fw-extra-bold separator">More Details </h5>
 			
 									<div class="d-flex flex-column">
-										<p><a href="about-us.html" class="text-decoration-none link-hover-animation-1">About
+										<p><a href="about-us" class="text-decoration-none link-hover-animation-1">About
 												Us</a></p>
-										<p><a href="export.html" class="text-decoration-none link-hover-animation-1">Export</a></p>
-										<p><a href="catalogue.html"
+										<p><a href="export" class="text-decoration-none link-hover-animation-1">Export</a></p>
+										<p><a href="catalogue"
 												class="text-decoration-none link-hover-animation-1">Catalogue</a></p>
-										<p><a href="contact.html" class="text-decoration-none link-hover-animation-1">Contact Us</a>
+										<p><a href="contact" class="text-decoration-none link-hover-animation-1">Contact Us</a>
 										</p>
 									</div>
 								</div>
@@ -1022,5 +1022,5 @@
 	</body>
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
 </html>
