--- a/600x600glossy.html
+++ b/600x600glossy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
 
 <head>
 	<meta charset="utf-8">
@@ -64,7 +64,7 @@
 				<div class="container-fluid max-width">
 		
 					<div class="d-flex align-items-end">
-						<a class="navbar-brand py-0" href="index.html">
+						<a class="navbar-brand py-0" href="index">
 							<span class="logo">
 								<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 							</span>
@@ -97,13 +97,13 @@
 							<ul class="navbar-nav justify-content-end flex-grow-1 align-items-xl-center">
 		
 								<li class="nav-item">
-									<a class="nav-link" href="index.html">
+									<a class="nav-link" href="index">
 										Home
 									</a>
 								</li>
 		
 								<li class="nav-item">
-									<a class="nav-link" href="about-us.html">
+									<a class="nav-link" href="about-us">
 										About Us
 									</a>
 								</li>
@@ -118,15 +118,15 @@
 											<a class="dropdown-item submenu-toggle dropdown-mobileview" href="#">Porcelain
 												Tiles</a>
 											<ul class="dropdown-menu submenu ">
-												<li><a class="dropdown-item submenu-mobile" href="600x600.html">600x600</a></li>
-												<li><a class="dropdown-item submenu-mobile" href="800x800.html">800x800</a></li>
-												<li><a class="dropdown-item submenu-mobile" href="600x1200.html">600x1200</a>
+												<li><a class="dropdown-item submenu-mobile" href="600x600">600x600</a></li>
+												<li><a class="dropdown-item submenu-mobile" href="800x800">800x800</a></li>
+												<li><a class="dropdown-item submenu-mobile" href="600x1200">600x1200</a>
 												</li>
 											</ul>
 										</li>
 		
-										<li><a class="dropdown-item" href="slab-tiles.html">Slab Tiles</a></li>
-										<li><a class="dropdown-item" href="ceramic-raw-material.html">Ceramic Raw Material</a>
+										<li><a class="dropdown-item" href="slab-tiles">Slab Tiles</a></li>
+										<li><a class="dropdown-item" href="ceramic-raw-material">Ceramic Raw Material</a>
 										</li>
 									</ul>
 								</li>
@@ -137,26 +137,26 @@
 										Product Details
 									</a>
 									<ul class="dropdown-menu" aria-labelledby="productDetailsDropdown">
-										<li><a class="dropdown-item" href="PackingDetails.html">Packing Details</a></li>
-										<li><a class="dropdown-item" href="technical-specification.html">Technical
+										<li><a class="dropdown-item" href="PackingDetails">Packing Details</a></li>
+										<li><a class="dropdown-item" href="technical-specification">Technical
 												Specification</a></li>
 									</ul>
 								</li>
 		
 								<li class="nav-item">
-									<a class="nav-link" href="export.html">
+									<a class="nav-link" href="export">
 										Export
 									</a>
 								</li>
 		
 								<li class="nav-item">
-									<a class="nav-link" href="catalogue.html">
+									<a class="nav-link" href="catalogue">
 										Catalogue
 									</a>
 								</li>
 		
 								<li class="nav-item">
-									<a class="nav-link" href="contact.html">
+									<a class="nav-link" href="contact">
 										Contact
 									</a>
 								</li>
@@ -211,7 +211,7 @@
 										alt="img">
 								</div>
 								<div class="shop-image-hover">
-									<a class="btn btn-sm btn-outline-secondary  gap-10" href="Glossy-Series.html">
+									<a class="btn btn-sm btn-outline-secondary  gap-10" href="Glossy-Series">
 										View All
 										<svg width="24" height="25" viewBox="0 0 24 25" fill="none"
 											xmlns="http://www.w3.org/2000/svg">
@@ -229,7 +229,7 @@
 								</div>
 							</div>
 							<!-- shop-image-wrapper -->
-							<a href="Glossy-Series.html" class="text-decoration-none">
+							<a href="Glossy-Series" class="text-decoration-none">
 								<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 									<div class="shopping-item-details">
 										<h5 class="fw-semibold product-title">Glossy Series</h5>
@@ -259,7 +259,7 @@
 						class="feedback-content d-flex flex-column gap-4 flex-lg-row align-items-lg-end justify-content-lg-around">
 						<h2 class="fw-extra-bold feedback-title">Drop Us a Line</h2>
 						<div class="Asiacera-International-button">
-							<a href="contact.html" class="btn btn-secondary gap-10">
+							<a href="contact" class="btn btn-secondary gap-10">
 								Lets Talk
 								<svg class="arrow" width="35" height="22" viewBox="0 0 35 22" fill="none"
 									xmlns="http://www.w3.org/2000/svg">
@@ -285,7 +285,7 @@
 					<div class="row gy-5 gy-lg-0  justify-content-between">
 						<div class="col-lg-3">
 							<div>
-								<a class="navbar-brand py-0" href="index.html">
+								<a class="navbar-brand py-0" href="index">
 									<span class="logo">
 										<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 									</span>
@@ -358,12 +358,12 @@
 								<h5 class="fw-extra-bold separator">More Details </h5>
 		
 								<div class="d-flex flex-column">
-									<p><a href="about-us.html" class="text-decoration-none link-hover-animation-1">About
+									<p><a href="about-us" class="text-decoration-none link-hover-animation-1">About
 											Us</a></p>
-									<p><a href="export.html" class="text-decoration-none link-hover-animation-1">Export</a></p>
-									<p><a href="catalogue.html"
+									<p><a href="export" class="text-decoration-none link-hover-animation-1">Export</a></p>
+									<p><a href="catalogue"
 											class="text-decoration-none link-hover-animation-1">Catalogue</a></p>
-									<p><a href="contact.html" class="text-decoration-none link-hover-animation-1">Contact Us</a>
+									<p><a href="contact" class="text-decoration-none link-hover-animation-1">Contact Us</a>
 									</p>
 								</div>
 							</div>
@@ -458,6 +458,6 @@
 </body>
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
 
 </html>
