--- a/600x600matt.html
+++ b/600x600matt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
 
 <head>
 	<meta charset="utf-8">
@@ -65,7 +65,7 @@
 				<div class="container-fluid max-width">
 		
 					<div class="d-flex align-items-end">
-						<a class="navbar-brand py-0" href="index.html">
+						<a class="navbar-brand py-0" href="index">
 							<span class="logo">
 								<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 							</span>
@@ -98,13 +98,13 @@
 							<ul class="navbar-nav justify-content-end flex-grow-1 align-items-xl-center">
 		
 								<li class="nav-item">
-									<a class="nav-link" href="index.html">
+									<a class="nav-link" href="index">
 										Home
 									</a>
 								</li>
 		
 								<li class="nav-item">
-									<a class="nav-link" href="about-us.html">
+									<a class="nav-link" href="about-us">
 										About Us
 									</a>
 								</li>
@@ -119,15 +119,15 @@
 											<a class="dropdown-item submenu-toggle dropdown-mobileview" href="#">Porcelain
 												Tiles</a>
 											<ul class="dropdown-menu submenu ">
-												<li><a class="dropdown-item submenu-mobile" href="600x600.html">600x600</a></li>
-												<li><a class="dropdown-item submenu-mobile" href="800x800.html">800x800</a></li>
-												<li><a class="dropdown-item submenu-mobile" href="600x1200.html">600x1200</a>
+												<li><a class="dropdown-item submenu-mobile" href="600x600">600x600</a></li>
+												<li><a class="dropdown-item submenu-mobile" href="800x800">800x800</a></li>
+												<li><a class="dropdown-item submenu-mobile" href="600x1200">600x1200</a>
 												</li>
 											</ul>
 										</li>
 		
-										<li><a class="dropdown-item" href="slab-tiles.html">Slab Tiles</a></li>
-										<li><a class="dropdown-item" href="ceramic-raw-material.html">Ceramic Raw Material</a>
+										<li><a class="dropdown-item" href="slab-tiles">Slab Tiles</a></li>
+										<li><a class="dropdown-item" href="ceramic-raw-material">Ceramic Raw Material</a>
 										</li>
 									</ul>
 								</li>
@@ -138,26 +138,26 @@
 										Product Details
 									</a>
 									<ul class="dropdown-menu" aria-labelledby="productDetailsDropdown">
-										<li><a class="dropdown-item" href="PackingDetails.html">Packing Details</a></li>
-										<li><a class="dropdown-item" href="technical-specification.html">Technical
+										<li><a class="dropdown-item" href="PackingDetails">Packing Details</a></li>
+										<li><a class="dropdown-item" href="technical-specification">Technical
 												Specification</a></li>
 									</ul>
 								</li>
 		
 								<li class="nav-item">
-									<a class="nav-link" href="export.html">
+									<a class="nav-link" href="export">
 										Export
 									</a>
 								</li>
 		
 								<li class="nav-item">
-									<a class="nav-link" href="catalogue.html">
+									<a class="nav-link" href="catalogue">
 										Catalogue
 									</a>
 								</li>
 		
 								<li class="nav-item">
-									<a class="nav-link" href="contact.html">
+									<a class="nav-link" href="contact">
 										Contact
 									</a>
 								</li>
@@ -316,7 +316,7 @@
 										alt="img">
 								</div>
 								<div class="shop-image-hover">
-									<a class="btn btn-sm btn-outline-secondary  gap-10" href="3D-Series.html">
+									<a class="btn btn-sm btn-outline-secondary  gap-10" href="3D-Series">
 										View All
 										<svg width="24" height="25" viewBox="0 0 24 25" fill="none"
 											xmlns="http://www.w3.org/2000/svg">
@@ -334,7 +334,7 @@
 								</div>
 							</div>
 							<!-- shop-image-wrapper -->
-							<a href="3D-Series.html" class="text-decoration-none">
+							<a href="3D-Series" class="text-decoration-none">
 								<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 									<div class="shopping-item-details">
 										<h5 class="fw-semibold product-title">3D Series</h5>
@@ -360,7 +360,7 @@
 								</div>
 								<div class="shop-image-hover">
 									<a class="btn btn-sm btn-outline-secondary  gap-10"
-										href="BookMatch-Series.html">
+										href="BookMatch-Series">
 										View All
 										<svg width="24" height="25" viewBox="0 0 24 25" fill="none"
 											xmlns="http://www.w3.org/2000/svg">
@@ -378,7 +378,7 @@
 								</div>
 							</div>
 							<!-- shop-image-wrapper -->
-							<a href="BookMatch-Series.html" class="text-decoration-none">
+							<a href="BookMatch-Series" class="text-decoration-none">
 								<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 									<div class="shopping-item-details">
 										<h5 class="fw-semibold product-title">BookMatch Series</h5>
@@ -403,7 +403,7 @@
 										alt="img">
 								</div>
 								<div class="shop-image-hover">
-									<a class="btn btn-sm btn-outline-secondary  gap-10" href="Carving-Series.html">
+									<a class="btn btn-sm btn-outline-secondary  gap-10" href="Carving-Series">
 										View All
 										<svg width="24" height="25" viewBox="0 0 24 25" fill="none"
 											xmlns="http://www.w3.org/2000/svg">
@@ -421,7 +421,7 @@
 								</div>
 							</div>
 							<!-- shop-image-wrapper -->
-							<a href="Carving-Series.html" class="text-decoration-none">
+							<a href="Carving-Series" class="text-decoration-none">
 								<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 									<div class="shopping-item-details">
 										<h5 class="fw-semibold product-title">Carving Series</h5>
@@ -442,10 +442,10 @@
 					<div class="shop-details">
 						<div class="shop-image-wrapper position-relative">
 							<div class="shop-image">
-								<img src="assets/images/photos/600x600/Hl-series.html.png" class="w-100 h-100 object-fit-cover" alt="img">
+								<img src="assets/images/photos/600x600/Hl-series.png" class="w-100 h-100 object-fit-cover" alt="img">
 							</div>
 							<div class="shop-image-hover">
-								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Hl-series.html">
+								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Hl-series">
 									View All
 									<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<g clip-path="url(#clip0_381_163)">
@@ -462,7 +462,7 @@
 							</div>
 						</div>
 						<!-- shop-image-wrapper -->
-						<a href="Hl-series.html" class="text-decoration-none">
+						<a href="Hl-series" class="text-decoration-none">
 							<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 								<div class="shopping-item-details">
 									<h5 class="fw-semibold product-title">Hl series</h5>
@@ -486,7 +486,7 @@
 								<img src="assets/images/photos/600x600/Marble-Series.png" class="w-100 h-100 object-fit-cover" alt="img">
 							</div>
 							<div class="shop-image-hover">
-								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Marble-Series.html">
+								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Marble-Series">
 									View All
 									<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<g clip-path="url(#clip0_381_163)">
@@ -503,7 +503,7 @@
 							</div>
 						</div>
 						<!-- shop-image-wrapper -->
-						<a href="Marble-Series.html" class="text-decoration-none">
+						<a href="Marble-Series" class="text-decoration-none">
 							<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 								<div class="shopping-item-details">
 									<h5 class="fw-semibold product-title">Marble Series</h5>
@@ -527,7 +527,7 @@
 								<img src="assets/images/photos/600x600/Matt-Finish.png" class="w-100 h-100 object-fit-cover" alt="img">
 							</div>
 							<div class="shop-image-hover">
-								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Matt-Finish.html">
+								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Matt-Finish">
 									View All
 									<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<g clip-path="url(#clip0_381_163)">
@@ -544,7 +544,7 @@
 							</div>
 						</div>
 						<!-- shop-image-wrapper -->
-						<a href="Matt-Finish.html" class="text-decoration-none">
+						<a href="Matt-Finish" class="text-decoration-none">
 							<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 								<div class="shopping-item-details">
 									<h5 class="fw-semibold product-title">Matt Finish</h5>
@@ -567,7 +567,7 @@
 								<img src="assets/images/photos/600x600/Moroccan-Series.png" class="w-100 h-100 object-fit-cover" alt="img">
 							</div>
 							<div class="shop-image-hover">
-								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Moroccan-Series.html">
+								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Moroccan-Series">
 									View All
 									<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<g clip-path="url(#clip0_381_163)">
@@ -584,7 +584,7 @@
 							</div>
 						</div>
 						<!-- shop-image-wrapper -->
-						<a href="Moroccan-Series.html" class="text-decoration-none">
+						<a href="Moroccan-Series" class="text-decoration-none">
 							<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 								<div class="shopping-item-details">
 									<h5 class="fw-semibold product-title">Moroccan Series</h5>
@@ -607,7 +607,7 @@
 								<img src="assets/images/photos/600x600/Rustic-Series.png" class="w-100 h-100 object-fit-cover" alt="img">
 							</div>
 							<div class="shop-image-hover">
-								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Rustic-Series.html">
+								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Rustic-Series">
 									View All
 									<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<g clip-path="url(#clip0_381_163)">
@@ -624,7 +624,7 @@
 							</div>
 						</div>
 						<!-- shop-image-wrapper -->
-						<a href="Rustic-Series.html" class="text-decoration-none">
+						<a href="Rustic-Series" class="text-decoration-none">
 							<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 								<div class="shopping-item-details">
 									<h5 class="fw-semibold product-title">Rustic Series</h5>
@@ -647,7 +647,7 @@
 								<img src="assets/images/photos/600x600/Satin-Matt-Series-1.png" class="w-100 h-100 object-fit-cover" alt="img">
 							</div>
 							<div class="shop-image-hover">
-								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Satin-Matt-Series-1.html">
+								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Satin-Matt-Series-1">
 									View All
 									<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<g clip-path="url(#clip0_381_163)">
@@ -664,7 +664,7 @@
 							</div>
 						</div>
 						<!-- shop-image-wrapper -->
-						<a href="Satin-Matt-Series-1.html" class="text-decoration-none">
+						<a href="Satin-Matt-Series-1" class="text-decoration-none">
 							<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 								<div class="shopping-item-details">
 									<h5 class="fw-semibold product-title">Satin Matt Series-1</h5>
@@ -687,7 +687,7 @@
 								<img src="assets/images/photos/600x600/Satin-Matt-Series-2.png" class="w-100 h-100 object-fit-cover" alt="img">
 							</div>
 							<div class="shop-image-hover">
-								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Satin-Matt-Series-2.html">
+								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Satin-Matt-Series-2">
 									View All
 									<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<g clip-path="url(#clip0_381_163)">
@@ -704,7 +704,7 @@
 							</div>
 						</div>
 						<!-- shop-image-wrapper -->
-						<a href="Satin-Matt-Series-2.html" class="text-decoration-none">
+						<a href="Satin-Matt-Series-2" class="text-decoration-none">
 							<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 								<div class="shopping-item-details">
 									<h5 class="fw-semibold product-title">Satin Matt Series-2</h5>
@@ -727,7 +727,7 @@
 								<img src="assets/images/photos/600x600/Wooden-Series-1.png" class="w-100 h-100 object-fit-cover" alt="img">
 							</div>
 							<div class="shop-image-hover">
-								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wooden-Series-1.html">
+								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wooden-Series-1">
 									View All
 									<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<g clip-path="url(#clip0_381_163)">
@@ -744,7 +744,7 @@
 							</div>
 						</div>
 						<!-- shop-image-wrapper -->
-						<a href="Wooden-Series-1.html" class="text-decoration-none">
+						<a href="Wooden-Series-1" class="text-decoration-none">
 							<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 								<div class="shopping-item-details">
 									<h5 class="fw-semibold product-title">Wooden Series-1</h5>
@@ -774,7 +774,7 @@
 						class="feedback-content d-flex flex-column gap-4 flex-lg-row align-items-lg-end justify-content-lg-around">
 						<h2 class="fw-extra-bold feedback-title">Drop Us a Line</h2>
 						<div class="Asiacera-International-button">
-							<a href="contact.html" class="btn btn-secondary gap-10">
+							<a href="contact" class="btn btn-secondary gap-10">
 								Lets Talk
 								<svg class="arrow" width="35" height="22" viewBox="0 0 35 22" fill="none"
 									xmlns="http://www.w3.org/2000/svg">
@@ -800,7 +800,7 @@
 					<div class="row gy-5 gy-lg-0  justify-content-between">
 						<div class="col-lg-3">
 							<div>
-								<a class="navbar-brand py-0" href="index.html">
+								<a class="navbar-brand py-0" href="index">
 									<span class="logo">
 										<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 									</span>
@@ -873,12 +873,12 @@
 								<h5 class="fw-extra-bold separator">More Details </h5>
 		
 								<div class="d-flex flex-column">
-									<p><a href="about-us.html" class="text-decoration-none link-hover-animation-1">About
+									<p><a href="about-us" class="text-decoration-none link-hover-animation-1">About
 											Us</a></p>
-									<p><a href="export.html" class="text-decoration-none link-hover-animation-1">Export</a></p>
-									<p><a href="catalogue.html"
+									<p><a href="export" class="text-decoration-none link-hover-animation-1">Export</a></p>
+									<p><a href="catalogue"
 											class="text-decoration-none link-hover-animation-1">Catalogue</a></p>
-									<p><a href="contact.html" class="text-decoration-none link-hover-animation-1">Contact Us</a>
+									<p><a href="contact" class="text-decoration-none link-hover-animation-1">Contact Us</a>
 									</p>
 								</div>
 							</div>
@@ -973,6 +973,6 @@
 </body>
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
 
 </html>
