--- a/800x800Carving.html
+++ b/800x800Carving.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:01 GMT -->
 <head>
 		<meta charset="utf-8">
         <meta name="theme-color"  content="#253b2f">
@@ -62,7 +62,7 @@
 					<div class="container-fluid max-width">
 			
 						<div class="d-flex align-items-end">
-							<a class="navbar-brand py-0" href="index.html">
+							<a class="navbar-brand py-0" href="index">
 								<span class="logo">
 									<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 								</span>
@@ -95,13 +95,13 @@
 								<ul class="navbar-nav justify-content-end flex-grow-1 align-items-xl-center">
 			
 									<li class="nav-item">
-										<a class="nav-link" href="index.html">
+										<a class="nav-link" href="index">
 											Home
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="about-us.html">
+										<a class="nav-link" href="about-us">
 											About Us
 										</a>
 									</li>
@@ -116,15 +116,15 @@
 												<a class="dropdown-item submenu-toggle dropdown-mobileview" href="#">Porcelain
 													Tiles</a>
 												<ul class="dropdown-menu submenu ">
-													<li><a class="dropdown-item submenu-mobile" href="600x600.html">600x600</a></li>
-													<li><a class="dropdown-item submenu-mobile" href="800x800.html">800x800</a></li>
-													<li><a class="dropdown-item submenu-mobile" href="600x1200.html">600x1200</a>
+													<li><a class="dropdown-item submenu-mobile" href="600x600">600x600</a></li>
+													<li><a class="dropdown-item submenu-mobile" href="800x800">800x800</a></li>
+													<li><a class="dropdown-item submenu-mobile" href="600x1200">600x1200</a>
 													</li>
 												</ul>
 											</li>
 			
-											<li><a class="dropdown-item" href="slab-tiles.html">Slab Tiles</a></li>
-											<li><a class="dropdown-item" href="ceramic-raw-material.html">Ceramic Raw Material</a>
+											<li><a class="dropdown-item" href="slab-tiles">Slab Tiles</a></li>
+											<li><a class="dropdown-item" href="ceramic-raw-material">Ceramic Raw Material</a>
 											</li>
 										</ul>
 									</li>
@@ -135,26 +135,26 @@
 											Product Details
 										</a>
 										<ul class="dropdown-menu" aria-labelledby="productDetailsDropdown">
-											<li><a class="dropdown-item" href="PackingDetails.html">Packing Details</a></li>
-											<li><a class="dropdown-item" href="technical-specification.html">Technical
+											<li><a class="dropdown-item" href="PackingDetails">Packing Details</a></li>
+											<li><a class="dropdown-item" href="technical-specification">Technical
 													Specification</a></li>
 										</ul>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="export.html">
+										<a class="nav-link" href="export">
 											Export
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="catalogue.html">
+										<a class="nav-link" href="catalogue">
 											Catalogue
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="contact.html">
+										<a class="nav-link" href="contact">
 											Contact
 										</a>
 									</li>
@@ -309,7 +309,7 @@
 										<img src="assets/images/photos/800x800/Carving/1.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Carving.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Carving"> 	
 											 View All													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_381_163)">
@@ -325,7 +325,7 @@
 									</div>
 								</div>
 								<!-- shop-image-wrapper -->
-								<a href="Carving.html" class="text-decoration-none">
+								<a href="Carving" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Carving</h5>
@@ -351,7 +351,7 @@
 										<img src="assets/images/photos/600x1200/Wl-Wooden-2023.png" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-Wooden-2023.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="Wl-Wooden-2023"> 	
 											View All
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<g clip-path="url(#clip0_381_163)">
@@ -367,7 +367,7 @@
 									</div>
 								</div>
 							
-								<a href="Wl-Wooden-2023.html" class="text-decoration-none">
+								<a href="Wl-Wooden-2023" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Wl Wooden Collection</h5>
@@ -387,7 +387,7 @@
 										<img src="assets/images/shop-image-4.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -403,7 +403,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Washbasins</h5>
@@ -427,7 +427,7 @@
 										<img src="assets/images/shop-image-5.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -443,7 +443,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Collaro</h5>
@@ -467,7 +467,7 @@
 										<img src="assets/images/shop-image-6.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -483,7 +483,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Pendant Lamp</h5>
@@ -507,7 +507,7 @@
 										<img src="assets/images/shop-image-7.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -523,7 +523,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Pendant Lamp</h5>
@@ -547,7 +547,7 @@
 										<img src="assets/images/shop-image-8.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -563,7 +563,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Scandal Wall Sconce</h5>
@@ -587,7 +587,7 @@
 										<img src="assets/images/shop-image-9.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -603,7 +603,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Soft Facet</h5>
@@ -627,7 +627,7 @@
 										<img src="assets/images/shop-image-10.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -643,7 +643,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Delírios Armchair</h5>
@@ -667,7 +667,7 @@
 										<img src="assets/images/shop-image-11.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -683,7 +683,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Panthella Portable</h5>
@@ -707,7 +707,7 @@
 										<img src="assets/images/shop-image-12.jpg" class="w-100 h-100 object-fit-cover" alt="img">
 									</div>
 									<div class="shop-image-hover">
-										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact.html"> 	
+										<a class="btn btn-sm btn-outline-secondary  gap-10" href="contact"> 	
 											Contact Us													
 											<svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<g clip-path="url(#clip0_381_163)">
@@ -723,7 +723,7 @@
 									</div>
 								</div> -->
 								<!-- shop-image-wrapper -->
-								<!-- <a href="contact.html" class="text-decoration-none">
+								<!-- <a href="contact" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
 											<h5 class="fw-semibold product-title">Ralik Modular System</h5>
@@ -785,7 +785,7 @@
 						<div class="feedback-content d-flex flex-column gap-4 flex-lg-row align-items-lg-end justify-content-lg-around">
 							<h2 class="fw-extra-bold feedback-title">Drop Us a Line</h2>
 							<div class="Asiacera-International-button">
-								<a href="contact.html" class="btn btn-secondary gap-10"> 
+								<a href="contact" class="btn btn-secondary gap-10"> 
 									Lets Talk
 									<svg class="arrow" width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"></path>
@@ -808,7 +808,7 @@
 						<div class="row gy-5 gy-lg-0  justify-content-between">
 							<div class="col-lg-3">
 								<div>
-									<a class="navbar-brand py-0" href="index.html">
+									<a class="navbar-brand py-0" href="index">
 										<span class="logo">
 											<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 										</span>
@@ -881,12 +881,12 @@
 									<h5 class="fw-extra-bold separator">More Details </h5>
 			
 									<div class="d-flex flex-column">
-										<p><a href="about-us.html" class="text-decoration-none link-hover-animation-1">About
+										<p><a href="about-us" class="text-decoration-none link-hover-animation-1">About
 												Us</a></p>
-										<p><a href="export.html" class="text-decoration-none link-hover-animation-1">Export</a></p>
-										<p><a href="catalogue.html"
+										<p><a href="export" class="text-decoration-none link-hover-animation-1">Export</a></p>
+										<p><a href="catalogue"
 												class="text-decoration-none link-hover-animation-1">Catalogue</a></p>
-										<p><a href="contact.html" class="text-decoration-none link-hover-animation-1">Contact Us</a>
+										<p><a href="contact" class="text-decoration-none link-hover-animation-1">Contact Us</a>
 										</p>
 									</div>
 								</div>
@@ -979,5 +979,5 @@
 	</body>
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/product-archive by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:25:05 GMT -->
 </html>
