--- a/about-us.html
+++ b/about-us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	
-<!-- Mirrored from themeperch.net/html/Asiacera-International/about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:24:47 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/about-us by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:24:47 GMT -->
 <head>
 		<meta charset="utf-8">
         <meta name="theme-color"  content="#253b2f">
@@ -65,7 +65,7 @@
 					<div class="container-fluid max-width">
 			
 						<div class="d-flex align-items-end">
-							<a class="navbar-brand py-0" href="index.html">
+							<a class="navbar-brand py-0" href="index">
 								<span class="logo">
 									<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 								</span>
@@ -98,13 +98,13 @@
 								<ul class="navbar-nav justify-content-end flex-grow-1 align-items-xl-center">
 			
 									<li class="nav-item">
-										<a class="nav-link" href="index.html">
+										<a class="nav-link" href="index">
 											Home
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="about-us.html">
+										<a class="nav-link" href="about-us">
 											About Us
 										</a>
 									</li>
@@ -119,15 +119,15 @@
 												<a class="dropdown-item submenu-toggle dropdown-mobileview" href="#">Porcelain
 													Tiles</a>
 												<ul class="dropdown-menu submenu ">
-													<li><a class="dropdown-item submenu-mobile" href="600x600.html">600x600</a></li>
-													<li><a class="dropdown-item submenu-mobile" href="800x800.html">800x800</a></li>
-													<li><a class="dropdown-item submenu-mobile" href="600x1200.html">600x1200</a>
+													<li><a class="dropdown-item submenu-mobile" href="600x600">600x600</a></li>
+													<li><a class="dropdown-item submenu-mobile" href="800x800">800x800</a></li>
+													<li><a class="dropdown-item submenu-mobile" href="600x1200">600x1200</a>
 													</li>
 												</ul>
 											</li>
 			
-											<li><a class="dropdown-item" href="slab-tiles.html">Slab Tiles</a></li>
-											<li><a class="dropdown-item" href="ceramic-raw-material.html">Ceramic Raw Material</a>
+											<li><a class="dropdown-item" href="slab-tiles">Slab Tiles</a></li>
+											<li><a class="dropdown-item" href="ceramic-raw-material">Ceramic Raw Material</a>
 											</li>
 										</ul>
 									</li>
@@ -138,26 +138,26 @@
 											Product Details
 										</a>
 										<ul class="dropdown-menu" aria-labelledby="productDetailsDropdown">
-											<li><a class="dropdown-item" href="PackingDetails.html">Packing Details</a></li>
-											<li><a class="dropdown-item" href="technical-specification.html">Technical
+											<li><a class="dropdown-item" href="PackingDetails">Packing Details</a></li>
+											<li><a class="dropdown-item" href="technical-specification">Technical
 													Specification</a></li>
 										</ul>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="export.html">
+										<a class="nav-link" href="export">
 											Export
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="catalogue.html">
+										<a class="nav-link" href="catalogue">
 											Catalogue
 										</a>
 									</li>
 			
 									<li class="nav-item">
-										<a class="nav-link" href="contact.html">
+										<a class="nav-link" href="contact">
 											Contact
 										</a>
 									</li>
@@ -277,7 +277,7 @@
 								<h2 class="stroke-heading">
 									<svg stroke-width="1" class="text-line-2 fw-extra-bold"><text x="0%" dominant-baseline="middle" y="70%">07</text></svg>
 								</h2>
-								<a href="service-single.html" class="text-decoration-none"><h4 class="service-title link-hover-animation-1 d-inline-block">Shaping Future Spaces</h4></a>
+								<a href="service-single" class="text-decoration-none"><h4 class="service-title link-hover-animation-1 d-inline-block">Shaping Future Spaces</h4></a>
 								<p class="mb-0">Become a leader in the tile industry by creating tile designs that are excellent and providing outstanding sales and support to homeowners, developers, contractors, and architects that utilise our goods.</p>
 							</div>	
 						</div>
@@ -287,7 +287,7 @@
 								<h2 class="stroke-heading">
 									<svg stroke-width="1" class="text-line-2 fw-extra-bold"><text x="0%" dominant-baseline="middle" y="70%">08</text></svg>
 								</h2>
-								<a href="service-single.html" class="text-decoration-none"><h4 class="service-title link-hover-animation-1 d-inline-block">Redefining Excellence</h4></a>
+								<a href="service-single" class="text-decoration-none"><h4 class="service-title link-hover-animation-1 d-inline-block">Redefining Excellence</h4></a>
 								<p class="mb-0">Willingness to improve lifestyle and a strong desire to make every Secco Ceramica client happy by consistently delivering high-quality.</p>
 							</div>
 						</div>
@@ -623,7 +623,7 @@
 							<div class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
 								<p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Where Imagination Meets Expertise and Dreams Take Shape</p>	
 								<div class="Asiacera-International-button">
-									<a href="contact.html" class="btn btn-outline-primary  gap-10"> Contact US							
+									<a href="contact" class="btn btn-outline-primary  gap-10"> Contact US							
 										<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 										</svg>							
@@ -648,7 +648,7 @@
 									<div class="team-author-image overflow-hidden">
 										<img src="assets/images/photos/1.png" class="w-100 h-100 object-fit-cover wow slideInLeft" alt="image">
 									</div>
-									<a href="600x1200matt.html" class="text-decoration-none stretched-link">
+									<a href="600x1200matt" class="text-decoration-none stretched-link">
 										<div class="team-details">											
 											<div class="team-details-inner position-relative d-flex align-items-center justify-content-between">
 												<div>
@@ -679,7 +679,7 @@
 									<div class="team-author-image overflow-hidden">
 										<img src="assets/images/photos/2.png" class="w-100 h-100 object-fit-cover wow slideInLeft" alt="image">
 									</div>
-									<a href="600x600matt.html" class="text-decoration-none stretched-link">
+									<a href="600x600matt" class="text-decoration-none stretched-link">
 										<div class="team-details">											
 											<div class="team-details-inner position-relative d-flex align-items-center justify-content-between">
 												<div>
@@ -710,7 +710,7 @@
 									<div class="team-author-image overflow-hidden">
 										<img src="assets/images/photos/3.png" class="w-100 h-100 object-fit-cover wow slideInLeft" alt="image">
 									</div>
-									<a href="1200x1800matt.html" class="text-decoration-none stretched-link">
+									<a href="1200x1800matt" class="text-decoration-none stretched-link">
 										<div class="team-details">											
 											<div class="team-details-inner position-relative d-flex align-items-center justify-content-between">
 												<div>
@@ -741,7 +741,7 @@
 									<div class="team-author-image overflow-hidden">
 										<img src="assets/images/photos/4.png" class="w-100 h-100 object-fit-cover wow slideInLeft" alt="image">
 									</div>
-									<a href="600x1200glossy.html" class="text-decoration-none stretched-link">
+									<a href="600x1200glossy" class="text-decoration-none stretched-link">
 										<div class="team-details">											
 											<div class="team-details-inner position-relative d-flex align-items-center justify-content-between">
 												<div>
@@ -772,7 +772,7 @@
 									<div class="team-author-image overflow-hidden">
 										<img src="assets/images/photos/5.png" class="w-100 h-100 object-fit-cover wow slideInLeft" alt="image">
 									</div>
-									<a href="600x600glossy.html" class="text-decoration-none stretched-link">
+									<a href="600x600glossy" class="text-decoration-none stretched-link">
 										<div class="team-details">											
 											<div class="team-details-inner position-relative d-flex align-items-center justify-content-between">
 												<div>
@@ -803,7 +803,7 @@
 									<div class="team-author-image overflow-hidden">
 										<img src="assets/images/photos/6.png" class="w-100 h-100 object-fit-cover wow slideInLeft" alt="image">
 									</div>
-									<a href="1200x1800glossy.html" class="text-decoration-none stretched-link">
+									<a href="1200x1800glossy" class="text-decoration-none stretched-link">
 										<div class="team-details">											
 											<div class="team-details-inner position-relative d-flex align-items-center justify-content-between">
 												<div>
@@ -834,7 +834,7 @@
 									<div class="team-author-image overflow-hidden">
 										<img src="assets/images/photos/7.png" class="w-100 h-100 object-fit-cover wow slideInLeft" alt="image">
 									</div>
-									<a href="600x1200glossy.html" class="text-decoration-none stretched-link">
+									<a href="600x1200glossy" class="text-decoration-none stretched-link">
 										<div class="team-details">											
 											<div class="team-details-inner position-relative d-flex align-items-center justify-content-between">
 												<div>
@@ -865,7 +865,7 @@
 									<div class="team-author-image overflow-hidden">
 										<img src="assets/images/photos/8.png" class="w-100 h-100 object-fit-cover wow slideInLeft" alt="image">
 									</div>
-									<a href="600x600SF.html" class="text-decoration-none stretched-link">
+									<a href="600x600SF" class="text-decoration-none stretched-link">
 										<div class="team-details">											
 											<div class="team-details-inner position-relative d-flex align-items-center justify-content-between">
 												<div>
@@ -896,7 +896,7 @@
 									<div class="team-author-image overflow-hidden">
 										<img src="assets/images/photos/9.png" class="w-100 h-100 object-fit-cover wow slideInLeft" alt="image">
 									</div>
-									<a href="1200x1800Carving.html" class="text-decoration-none stretched-link">
+									<a href="1200x1800Carving" class="text-decoration-none stretched-link">
 										<div class="team-details">											
 											<div class="team-details-inner position-relative d-flex align-items-center justify-content-between">
 												<div>
@@ -932,7 +932,7 @@
 						<div class="feedback-content d-flex flex-column gap-4 flex-lg-row align-items-lg-end justify-content-lg-around">
 							<h2 class="fw-extra-bold feedback-title">Drop Us a Line</h2>
 							<div class="Asiacera-International-button">
-								<a href="contact.html" class="btn btn-secondary gap-10"> 
+								<a href="contact" class="btn btn-secondary gap-10"> 
 									Lets Talk
 									<svg class="arrow" width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"></path>
@@ -955,7 +955,7 @@
 					<div class="row gy-5 gy-lg-0  justify-content-between">
 						<div class="col-lg-3">
 							<div>
-								<a class="navbar-brand py-0" href="index.html">
+								<a class="navbar-brand py-0" href="index">
 									<span class="logo">
 										<img src="assets/images/fav-icon/AS2.png" alt="logo" width="auto" height="50">
 									</span>
@@ -1028,12 +1028,12 @@
 								<h5 class="fw-extra-bold separator">More Details </h5>
 		
 								<div class="d-flex flex-column">
-									<p><a href="about-us.html" class="text-decoration-none link-hover-animation-1">About
+									<p><a href="about-us" class="text-decoration-none link-hover-animation-1">About
 											Us</a></p>
-									<p><a href="export.html" class="text-decoration-none link-hover-animation-1">Export</a></p>
-									<p><a href="catalogue.html"
+									<p><a href="export" class="text-decoration-none link-hover-animation-1">Export</a></p>
+									<p><a href="catalogue"
 											class="text-decoration-none link-hover-animation-1">Catalogue</a></p>
-									<p><a href="contact.html" class="text-decoration-none link-hover-animation-1">Contact Us</a>
+									<p><a href="contact" class="text-decoration-none link-hover-animation-1">Contact Us</a>
 									</p>
 								</div>
 							</div>
@@ -1127,5 +1127,5 @@
 	</body>
 
 
-<!-- Mirrored from themeperch.net/html/Asiacera-International/about-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:24:47 GMT -->
+<!-- Mirrored from themeperch.net/html/Asiacera-International/about-us by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 13 Aug 2024 05:24:47 GMT -->
 </html>
