--- a/600x600matt.html
+++ b/600x600matt.html
@@ -442,7 +442,7 @@
 					<div class="shop-details">
 						<div class="shop-image-wrapper position-relative">
 							<div class="shop-image">
-								<img src="assets/images/photos/600x600/Hl-series.png" class="w-100 h-100 object-fit-cover" alt="img">
+								<img src="assets/images/photos/600x600/Hl-series.html.png" class="w-100 h-100 object-fit-cover" alt="img">
 							</div>
 							<div class="shop-image-hover">
 								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Hl-series">
