--- a/600x1200glossy.html
+++ b/600x1200glossy.html
@@ -641,7 +641,7 @@
 								<a href="Wl-marmi-Collection" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
-											<h5 class="fw-semibold product-title">marmi Collection</h5>
+											<h5 class="fw-semibold product-title">Marmi Collection</h5>
 											<!-- <span class="product-price fs-5">$499.99</span> -->
 										</div>
 										<!-- <div class="star-rating-wrap pt-1">
@@ -762,7 +762,7 @@
 								<a href="Wl-platinum-Collection" class="text-decoration-none">
 									<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 										<div class="shopping-item-details">
-											<h5 class="fw-semibold product-title">platinum Collection</h5>
+											<h5 class="fw-semibold product-title">Platinum Collection</h5>
 											<!-- <span class="product-price fs-5">$134.99</span> -->
 										</div>
 										<!-- <div class="star-rating-wrap pt-1">
