--- a/600x600matt.html
+++ b/600x600matt.html
@@ -442,7 +442,7 @@
 					<div class="shop-details">
 						<div class="shop-image-wrapper position-relative">
 							<div class="shop-image">
-								<img src="assets/images/photos/600x600/Hl-series.png" class="w-100 h-100 object-fit-cover" alt="img">
+								<img src="assets/images/photos/600x600/Satin-Matt-Series-2.png" class="w-100 h-100 object-fit-cover" alt="img">
 							</div>
 							<div class="shop-image-hover">
 								<a class="btn btn-sm btn-outline-secondary  gap-10" href="Hl-series">
@@ -667,7 +667,7 @@
 						<a href="Satin-Matt-Series-1" class="text-decoration-none">
 							<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 								<div class="shopping-item-details">
-									<h5 class="fw-semibold product-title">Satin Matt Series-1</h5>
+									<h5 class="fw-semibold product-title">Satin Matt</h5>
 									<!-- <span class="product-price fs-5">$499.99</span> -->
 								</div>
 								<!-- <div class="star-rating-wrap pt-1">
@@ -680,7 +680,7 @@
 					</div>
 				</div>
 				<!-- col-4 -->
-				<div class="col-md-6 col-lg-4">
+				<!-- <div class="col-md-6 col-lg-4">
 					<div class="shop-details">
 						<div class="shop-image-wrapper position-relative">
 							<div class="shop-image">
@@ -703,22 +703,17 @@
 								</a>
 							</div>
 						</div>
-						<!-- shop-image-wrapper -->
+						
 						<a href="Satin-Matt-Series-2" class="text-decoration-none">
 							<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 								<div class="shopping-item-details">
-									<h5 class="fw-semibold product-title">Satin Matt Series-2</h5>
-									<!-- <span class="product-price fs-5">$499.99</span> -->
-								</div>
-								<!-- <div class="star-rating-wrap pt-1">
-															<span class="star-rating" >										
-																<span class="star-fill" style="width: 80%;"></span>
-															</span>
-														</div>																				 -->
+									<h5 class="fw-semibold product-title">Satin Matt</h5>
+									
+								</div>														
 							</div>
 						</a>
 					</div>
-				</div>
+				</div> -->
 				<!-- col-4 -->
 				<div class="col-md-6 col-lg-4">
 					<div class="shop-details">
@@ -747,7 +742,7 @@
 						<a href="Wooden-Series-1" class="text-decoration-none">
 							<div class="shopping-info-wrapper mt-3 mt-lg-4 d-flex justify-content-between">
 								<div class="shopping-item-details">
-									<h5 class="fw-semibold product-title">Wooden Series-1</h5>
+									<h5 class="fw-semibold product-title">Wooden Series</h5>
 									<!-- <span class="product-price fs-5">$499.99</span> -->
 								</div>
 								<!-- <div class="star-rating-wrap pt-1">
