--- a/Wl-platinum-Collection.html
+++ b/Wl-platinum-Collection.html
@@ -290,7 +290,7 @@
                             <h2 class="fw-extra-bold heading-title separator lh-1">600x1200</h2>
                             <div
                                 class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
-                                <p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">platinum-Collection</p>
+                                <p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Platinum-Collection</p>
                             </div>
                         </div>
                     </div>
