--- a/Wooden-Series-1.html
+++ b/Wooden-Series-1.html
@@ -186,7 +186,7 @@
                             <h2 class="fw-extra-bold heading-title separator lh-1">600x600</h2>
                             <div
                                 class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
-                                <p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Wooden Series-1</p>
+                                <p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Wooden Series</p>
                             </div>
                         </div>
                     </div>
