--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 								<div class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
 									<p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Explore our stunning collection of ceramic tiles, beautifully displayed in various settings.</p>	
 									<div class="Asiacera-International-button">
-										<a href="#" class="btn btn-outline-primary  gap-10">View All Projects 							
+										<a href="" class="btn btn-outline-primary  gap-10">View All Projects 							
 											<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 											</svg>							
@@ -588,11 +588,11 @@
 								<div class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
 									<p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Unlock endless possibilities for your space with our Custom Tile Design Services.</p>	
 									<div class="Asiacera-International-button">
-										<a href="contact" class="btn btn-outline-primary  gap-10">View All Services 							
+										<!-- <a href="contact" class="btn btn-outline-primary  gap-10">View All Services 							
 											<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 											</svg>							
-										</a>
+										</a> -->
 									</div>								
 								</div>
 							</div>
@@ -725,7 +725,7 @@
 								<div class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
 									<p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Experience the beauty of timeless artistry with every tile we create.</p>	
 									<div class="Asiacera-International-button">
-										<a href="contact" class="btn btn-outline-primary  gap-10">Our Product  							
+										<a href="slab-tiles" class="btn btn-outline-primary  gap-10">Our Product  							
 											<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 											</svg>							
@@ -981,7 +981,7 @@
 									</ul>
 										
 									<div class="Asiacera-International-button">
-										<a href="contact" class="btn btn-outline-secondary  d-inline-flex gap-10 align-items-center">Process of Our Work<span>
+										<a href="about-us" class="btn btn-outline-secondary  d-inline-flex gap-10 align-items-center">Process of Our Work<span>
 											<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 											</svg></span>
@@ -1029,11 +1029,11 @@
 								<div class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
 									<p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Discover the artistry and craftsmanship behind our Elegant Tile Creations.</p>	
 									<div class="Asiacera-International-button">
-										<a href="contact" class="btn btn-outline-primary  gap-10">All Our Work 							
+										<!-- <a href="contact" class="btn btn-outline-primary  gap-10">All Our Work 							
 											<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 											</svg>							
-										</a>
+										</a> -->
 									</div>								
 								</div>
 							</div>
@@ -1151,9 +1151,9 @@
 										<span class="fs-5 fw-bold">Project type:</span>
 										<span>Interior design</span>
 									</li> -->
-									<li class="Asiacera-International-button d-none d-xl-block">
+									<!-- <li class="Asiacera-International-button d-none d-xl-block">
 										<a href="contact" class="btn btn-outline-secondary  gap-10">View Project</a>
-									</li>
+									</li> -->
 								</ul>
 								<div class="project-info bg-primary">
 									<h5 class="project-title fw-extra-bold">Living Room Elegance</h5>
