--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 								<div class="d-flex flex-column flex-lg-row gap-4 align-items-lg-end justify-content-lg-between">
 									<p class="fs-4 fw-semibold mb-0 subtitle subtitle-width">Explore our stunning collection of ceramic tiles, beautifully displayed in various settings.</p>	
 									<div class="Asiacera-International-button">
-										<a href="" class="btn btn-outline-primary  gap-10">View All Projects 							
+										<a href="projectSlider" class="btn btn-outline-primary  gap-10">View All Projects 							
 											<svg width="35" height="22" viewBox="0 0 35 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<path fill-rule="evenodd" clip-rule="evenodd" d="M24 0.585815L34.4142 10.9999L24 21.4142L22.5858 20L30.5857 12L0 12L2.38419e-07 10L30.5858 10L22.5858 2.00003L24 0.585815Z"/>
 											</svg>							
@@ -1069,9 +1069,9 @@
 										<span class="fs-5 fw-bold">Installation Area:</span>
 										<span>Shower walls, floors, and backsplash</span>
 									</li>
-									<li class="Asiacera-International-button d-none d-xl-block">
+									<!-- <li class="Asiacera-International-button d-none d-xl-block">
 										<a href="contact" class="btn btn-outline-secondary  gap-10">View Project</a>
-									</li>
+									</li> -->
 								</ul>
 								<div class="project-info bg-primary">
 									<h5 class="project-title fw-extra-bold">Luxurious Bathroom</h5>
@@ -1110,17 +1110,17 @@
 										<span class="fs-5 fw-bold">Project type:</span>
 										<span>Furnishings</span>
 									</li> -->
-									<li class="Asiacera-International-button d-none d-xl-block">
+									<!-- <li class="Asiacera-International-button d-none d-xl-block">
 										<a href="contact" class="btn btn-outline-secondary  gap-10">View Project</a>
-									</li>
+									</li> -->
 								</ul>
 								<div class="project-info bg-primary">
 									<h5 class="project-title fw-extra-bold">Kitchen Makeover</h5>
 									<p class="mb-0">Add vibrancy to your kitchen with bold colors and unique patterns... <a class="text-decoration-none fw-extra-bold" href="contact">see more</a></p>
 
-									<div class="Asiacera-International-button d-block d-xl-none mt-4">
+									<!-- <div class="Asiacera-International-button d-block d-xl-none mt-4">
 										<a href="contact" class="btn btn-outline-secondary  gap-10">View Project</a>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						  </div>
@@ -1159,9 +1159,9 @@
 									<h5 class="project-title fw-extra-bold">Living Room Elegance</h5>
 									<p class="mb-0">Create a modern, cozy living room with earthy tones and sleek tiles ... <a class="text-decoration-none fw-extra-bold" href="contact">see more</a></p>
 
-									<div class="Asiacera-International-button d-block d-xl-none mt-4">
+									<!-- <div class="Asiacera-International-button d-block d-xl-none mt-4">
 										<a href="contact" class="btn btn-outline-secondary  gap-10">View Project</a>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						  </div>
