--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 		<!-- Customise-Theme -->
 		<link rel="stylesheet" href="assets/css/theme.css">
+	<meta name="google-site-verification" content="UpmvOxZr9AMrFmSc_0xpbnqxcfhGUouE9wY1EKbkung" />
 		
 	</head>
 
