--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 										</a>
 									</li>
 			
-									<li class="nav-item dropdown">
+									<!-- <li class="nav-item dropdown">
 										<a class="nav-link dropdown-toggle main-dropdown" href="#" id="productDetailsDropdown">
 											Our Products
 										</a>
 										<ul class="dropdown-menu">
-											<!-- Porcelain Tiles with Submenu -->
+											
 											<li class="dropdown-submenu">
 												<a class="dropdown-item submenu-toggle dropdown-mobileview" href="#">Porcelain
 													Tiles</a>
@@ -130,6 +130,27 @@
 											<li><a class="dropdown-item" href="slab-tiles">Slab Tiles</a></li>
 											<li><a class="dropdown-item" href="ceramic-raw-material">Ceramic Raw Material</a>
 											</li>
+										</ul>
+									</li> -->
+
+									
+
+									<li class="nav-item dropdown">
+										<a class="nav-link dropdown-toggle" href="#" id="productDetailsDropdown" role="button" data-bs-toggle="dropdown"
+											aria-expanded="false">
+											Our Products
+										</a>
+										<ul class="dropdown-menu" aria-labelledby="productDetailsDropdown">
+											<li class="dropdown-submenu">
+												<a class="dropdown-item dropdown-toggle" href="#">Porcelain Tiles</a>
+												<ul class="dropdown-menu">
+													<li><a class="dropdown-item" href="600x600">600x600</a></li>
+													<li><a class="dropdown-item" href="800x800">800x800</a></li>
+													<li><a class="dropdown-item" href="600x1200">600x1200</a></li>
+												</ul>
+											</li>
+											<li><a class="dropdown-item" href="slab-tiles">Slab Tiles</a></li>
+											<li><a class="dropdown-item" href="ceramic-raw-material">Ceramic Raw Material</a></li>
 										</ul>
 									</li>
 			
