--- a/slab-tiles.html
+++ b/slab-tiles.html
@@ -117,25 +117,21 @@
 								</li>
 		
 								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle main-dropdown" href="#" id="productDetailsDropdown">
+									<a class="nav-link dropdown-toggle" href="#" id="productDetailsDropdown" role="button" data-bs-toggle="dropdown"
+										aria-expanded="false">
 										Our Products
 									</a>
-									<ul class="dropdown-menu">
-										<!-- Porcelain Tiles with Submenu -->
+									<ul class="dropdown-menu" aria-labelledby="productDetailsDropdown">
 										<li class="dropdown-submenu">
-											<a class="dropdown-item submenu-toggle dropdown-mobileview" href="#">Porcelain
-												Tiles</a>
-											<ul class="dropdown-menu submenu ">
-												<li><a class="dropdown-item submenu-mobile" href="600x600">600x600</a></li>
-												<li><a class="dropdown-item submenu-mobile" href="800x800">800x800</a></li>
-												<li><a class="dropdown-item submenu-mobile" href="600x1200">600x1200</a>
-												</li>
+											<a class="dropdown-item dropdown-toggle" href="#">Porcelain Tiles</a>
+											<ul class="dropdown-menu">
+												<li><a class="dropdown-item" href="600x600">600x600</a></li>
+												<li><a class="dropdown-item" href="800x800">800x800</a></li>
+												<li><a class="dropdown-item" href="600x1200">600x1200</a></li>
 											</ul>
 										</li>
-		
 										<li><a class="dropdown-item" href="slab-tiles">Slab Tiles</a></li>
-										<li><a class="dropdown-item" href="ceramic-raw-material">Ceramic Raw Material</a>
-										</li>
+										<li><a class="dropdown-item" href="ceramic-raw-material">Ceramic Raw Material</a></li>
 									</ul>
 								</li>
 		
